deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-docker-example
  labels:
    app: spring-docker-example
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-docker-example
  template:
    metadata:
      labels:
        app: spring-docker-example
    spec:
      containers:
        - name: spring-docker-example
          image: docker.io/library/spring-docker-example-spring-app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: docker.io/library/mysql:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3306
