service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-docker-example-service
  labels:
    app: spring-docker-example
spec:
  type: NodePort
  selector:
    app: spring-docker-example
  ports:
    - protocol: TCP
      port: 8080       # Service port
      targetPort: 8080  # Container port
      nodePort: 30008   # Exposed port on the node (should be between 30000-32767)

---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    app: mysql
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  clusterIP: None  # Headless service for internal communication
