ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-docker-example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: spring-app.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: spring-docker-example-service
            port:
              number: 8080
